--- a/public/chatApp/homePage.css
+++ b/public/chatApp/homePage.css
@@ -32,6 +32,7 @@ img {
 
 .people-list li{
     list-style: none;
+    padding: 5px;
 }
 
 .people-list li:hover {
@@ -48,7 +49,6 @@ img {
 }
 
 .chat-card .chat-user {
-    position: sticky;
     background-color: aliceblue;
 }
 
