--- a/public/chatApp/homePage.css
+++ b/public/chatApp/homePage.css
@@ -28,6 +28,7 @@ img {
     width: 30%;
     background-color: aliceblue;
     border-right: solid #0cb2db 2px;
+    overflow: scroll;
 }
 
 .people-list li{
@@ -46,6 +47,7 @@ img {
 
 .chat-card {
     width: 70%;
+    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 
 .chat-card .chat-user {
@@ -53,20 +55,33 @@ img {
 }
 
 .chat-card-msgs {
-    height: 79.6%;
+    height: 81.1%;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 
-.chat-card-msgs .send-msg {
-    text-align: end;
+.chat-card-msgs .my-msg {
     background-color: rgb(240, 230, 230);
     margin: 1px;
+    margin-left: auto;
+    border-radius: 10px 0 0 10px;
+    padding: 3px;
 }
 
-.chat-card-msgs .rec-msg {
+.chat-card-msgs .others-msg {
     background-color: rgb(211, 247, 244);
     margin: 1px;
+    margin-right: auto;
+    border-radius: 0 10px 10px 0;
+    padding: 3px;
+}
+
+.chat-card-msgs .chat-joined-user {
+    background-color: rgb(211, 245, 167);
+    margin: 1px auto;
+    border-radius: 10px;
+    padding: 2px;
 }
 
 .chat-card .msg-form {
