--- a/public/chatApp/homePage.css
+++ b/public/chatApp/homePage.css
@@ -70,6 +70,7 @@ img {
 
 .chat-card .chat-card-title {
     background-color: aliceblue;
+    height: 9%;
 }
 
 #chat-msgs-box li{
@@ -86,9 +87,13 @@ img {
     font-size: small;
 }
 
+.chat-card .chat-card-title .about{
+    margin-right: auto;
+}
+
 .chat-card .chat-card-title .addBtn{
-    margin-right: 5px;
-    margin-left: auto;
+    margin-right: 2px;
+    font-size: small;
 }
 
 .chat-card-msgs {
